--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,15 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",  // Your entry point (e.g., your Express server file)
+      "use": "@vercel/node"  // Tells Vercel to use the Node.js environment
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",   // This routes all requests to the server
+      "dest": "index.js"  // Your entry point (Express app will handle the routes)
+    }
+  ]
+}
